Patch warnings in SlymyTrueTypeFont